chore: fixed cli native compilation config